--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,10 @@
 
 environment:
   matrix:
-    - PYTHON_VERSION: 2.7
+    - platform: x64 
+      PYTHON_VERSION: "2.7"
       MINICONDA: C:\Miniconda
-      
+
 install:
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
   - conda config --set always_yes yes --set changeps1 no
