--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,12 +3,15 @@ platform:
   - x64
 
 environment:
+  PYTHON: "C:\\Python27_64"
   PYTHON_VERSION: "2.7"
-  MINICONDA: C:\Miniconda
-  BUILD_PLATFORM: 'x64'
+  PYTHON_ARCH: "64"
+  CONDA_PY: "27"
+  CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\continuous-integration\\appveyor\\run_with_env.cmd"
   
 install:
-  - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
+  - powershell .\\continuous-integration\\appveyor\\install.ps1
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
