--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
   PYTHON_VERSION: "2.7"
   PYTHON_ARCH: "64"
   CONDA_PY: "27"
-  CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\continuous-integration\\appveyor\\run_with_env.cmd"
+  CMD_IN_ENV: "cmd /E:ON /V:ON /C .\run_with_env.cmd"
   
 install:
   - powershell .\appveyor_install.ps1
