--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,15 +3,14 @@ environment:
   PYTHON_VERSION: "2.7"
   PYTHON_ARCH: "64"
   CONDA_PY: "27"
-  CMD_IN_ENV: "cmd /E:ON /V:ON /C .\run_with_env.cmd"
   
 install:
   - powershell .\appveyor_install.ps1
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-  - "%CMD_IN_ENV%conda config --set always_yes yes --set changeps1 no"
-  - "%CMD_IN_ENV% conda update -q conda"
-  - "%CMD_IN_ENV% conda info -a"
-  - "%CMD_IN_ENV% conda install conda-build=1.21"
+  - "conda config --set always_yes yes --set changeps1 no"
+  - "conda update -q conda"
+  - "conda info -a"
+  - "conda install conda-build=1.21"
   
 build_script:
   - CALL .\appveyor_build.bat
