--- a/toolchain/meta.yaml
+++ b/toolchain/meta.yaml
@@ -17,7 +17,8 @@ requirements:
     - mingwpy # [win]
   run:
     - python
-    - mingwpy # [win]
+    - mingwpy # [win and x86_64]
+    - mingw # [win and x86]
 
 test:
   commands:
