--- a/zlib/meta.yaml
+++ b/zlib/meta.yaml
@@ -8,7 +8,13 @@ source:
   md5: 44d667c142d7cda120332623eab69f40
 
 build:
-  number: 1
+  number: 0
+  script_env:
+    - TOOLCHAIN # [not win]
+  features:
+    - {{ TOOLCHAIN }} # [not win]
+  track_features:
+    - {{ TOOLCHAIN }} # [not win]
 
 about:
   home: http://zlib.net/
