--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
     - source activate _travis;
 
 script:
+    - conda build zlib -c statiskit
     - conda build libboost_python -q -c statiskit
     - conda build python-scons -q -c statiskit
     - conda build python-parse -q -c statiskit
