--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 
 script:
   - more build.sh
-  - sed -i 's/build/build -q/g' build.sh 
+  - sed -i'' -e 's/build/build -q/g' build.sh 
   - more build.sh
   - sed -i '3,4d' build.sh
   - more build.sh
