--- a/libboost_python/meta.yaml
+++ b/libboost_python/meta.yaml
@@ -26,6 +26,6 @@ requirements:
   build:
     - toolchain
     - python
-    - boost_build # [win]
+    # - boost_build # [win]
   run:
     - python
