--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,7 @@ script:
 after_success:
     - coveralls;
     - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
-        conda install -n root anaconda-client;
-        yes | anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
-        source activate;
-        for CONDA_RECIPE in toolchain libboost_python python-scons python-parse; do
-          CONDA_FILE=`conda build $CONDA_RECIPE --output`; 
-          anaconda upload --user statiskit ${CONDA_FILE%%} || echo "upload failed";
-        done;
-        anaconda logout;
+        bash upload.sh;
       fi
     - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
         docker build -q --build-arg BUILD="false" -t statiskit/ubuntu . ;
