Add language in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@
 # File authors: Pierre Fernique <pfernique@gmail.com> (18)                       #
 #                                                                                #
 ##################################################################################
-langague: python
+
+language: python
 
 matrix:
   include:
