--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ build_script:
   - echo "echo ON" >> tmp.bat
   - more +7 "bld.bat" > tmp.bat
   - powershell -Command "(gc tmp.bat) -replace 'build', 'build --no-test' | Out-File tmp.bat"
+  - more tmp.bat
   - call tmp.bat
   - cd ..
   
