--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
   
 build_script:
   - cd conda
-  - echo "echo ON" >> tmp.bat
+  - echo echo ON >> tmp.bat
   - more +7 "bld.bat"
   - more +7 "bld.bat" >> tmp.bat
   - powershell -Command "(gc tmp.bat) -replace 'build', 'build --no-test' | Out-File tmp.bat"
