--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,8 @@ build_script:
   - more +7 "bld.bat" >> tmp.bat
   - powershell -Command "(gc tmp.bat) -replace 'build', 'build --no-test' | Out-File tmp.bat"
   - more tmp.bat
-  - more tmp.bat > tmp.bat
-  - more tmp.bat
+  #- more tmp.bat > tmp.bat
+  #- more tmp.bat
   - call tmp.bat
   - cd ..
   
