--- a/travis.yml
+++ b/travis.yml
@@ -14,7 +14,7 @@
 #                                                                                #
 ##################################################################################
 
-language: python
+language: cpp
 
 matrix:
   include:
