Create conda folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,1 @@
-language: cpp
-
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      services:
-        - docker
-    - os: osx
-      osx_image: xcode7.2
-        
-before_install:
-  - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh &> /dev/null;
-    elif [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
-      curl https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -o miniconda.sh &> /dev/null;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda &> /dev/null
-  - export PATH=$HOME/miniconda/bin:$PATH
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda &> /dev/null;
-  - conda info -a &> /dev/null;
-  - conda install conda-build &> /dev/null;
-
-install:
-  - pip install python-coveralls &> /dev/null;
-
-script:
-  - sed -i'' -e 's/build/build -q/g' build.sh 
-  - sed -i'' -e '3,4d' build.sh
-  - bash build.sh
-
-after_success:
-    - coveralls;
-    - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
-        bash upload.sh;
-      fi
-    - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
-        docker build -q --build-arg BUILD="false" -t statiskit/ubuntu . ;
-        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-        docker push statiskit/ubuntu  &> /dev/null;
-      fi
+../travis.yml
