--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,15 @@ install:
   - "conda install conda-build=1.21"
   
 build_script:
+  - cd conda
+  - echo echo ON >> tmp.bat
+  - more +7 "bld.bat" >> tmp.bat
+  - del bld.bat
+  - more tmp.bat >> bld.bat
   - call bld.bat
+  - cd ..
   
 on_success:
-  - call upload.bat
+  - cd conda
+  - if "%APPVEYOR_REPO_BRANCH%"=="master" if not "%ANACONDA_USERNAME%"=="" if not "%ANACONDA_PASSWORD%"=="" call upload.bat
+  - cd ..
