--- a/travis.yml
+++ b/travis.yml
@@ -38,8 +38,8 @@ after_success:
       bash upload.sh;
       cd ..;
     fi
-  # - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
-  #     docker build -q -t statiskit/misc Dockerfile;
-  #     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-  #     docker push statiskit/ubuntu  &> /dev/null;
-  #   fi
+  - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
+      docker build -q -t statiskit/ubuntu Dockerfile;
+      docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+      docker push statiskit/ubuntu;
+    fi
