--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ build_script:
   - more +7 "bld.bat" >> tmp.bat
   - del bld.bat
   - more tmp.bat >> bld.bat
-  - %CMD_IN_ENV% call bld.bat
+  - "%CMD_IN_ENV% call bld.bat"
   - cd ..
   
 on_success:
