--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,12 @@ environment:
       PYTHON_VERSION: "2.7"
       
 install:
-  - 'IF "%PLATFORM%" == "x86" set PATH=C:\Miniconda;C:\Miniconda\Scripts;%PATH%'
-  - 'IF "%PLATFORM%" == "x64" set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%'
+  - 'if "%PLATFORM%" == "x86" set PATH=C:\Miniconda;C:\Miniconda\Scripts;%PATH%'
+  - 'if "%PLATFORM%" == "x64" set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%'
+  - 'set WIN_SDK_ROOT="C:\Program Files\Microsoft SDKs\Windows"'
+  - 'set WINDOWS_SDK_VERSION="v7.0"'
+  - 'if "%PLATFORM%" == "x64" %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Setup\WindowsSdkVer.exe -q -version:%WINDOWS_SDK_VERSION%'
+  - 'if "%PLATFORM%" == "x64" %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Bin\SetEnv.cmd" /x64 /release'
   - "conda config --set always_yes yes --set changeps1 no"
   - "conda update -q conda"
   - "conda info -a"
