--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - 'echo %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%'
   - 'dir %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%' 
   - 'if "%PLATFORM%" == "x64" %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Setup\WindowsSdkVer.exe -q -version:%WINDOWS_SDK_VERSION%'
-  - 'if "%PLATFORM%" == "x64" cmd /E:ON /V:ON /C . %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Bin\SetEnv.cmd /x64 /release'
+  - 'if "%PLATFORM%" == "x64" cmd /E:ON /V:ON /C %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Bin\SetEnv.cmd /x64 /release'
   - "conda config --set always_yes yes --set changeps1 no"
   - "conda update -q conda"
   - "conda info -a"
