--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,9 @@
 environment:
+  CMD_IN_ENV: "cmd /E:ON /V:ON /C obvci_appveyor_python_build_env.cmd"
   matrix:
     - PLATFORM: x64
       PYTHON_VERSION: "2.7"
+      CONDA_PY: 27
     #- PLATFORM: x86
     #  PYTHON_VERSION: "2.7"
       
@@ -14,8 +16,8 @@ install:
   - 'set WINDOWS_SDK_VERSION="v7.0"'
   - 'echo %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%'
   - 'dir %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%' 
-  - 'if "%PLATFORM%" == "x64" %WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Setup\WindowsSdkVer.exe -q -version:%WINDOWS_SDK_VERSION%'
-  - 'if "%PLATFORM%" == "x64" cmd /E:ON /V:ON /C "%WIN_SDK_ROOT%\%WINDOWS_SDK_VERSION%\Bin\SetEnv.cmd /x64 /release"'
+  - 'if "%PLATFORM%" == "x64" appveyor DownloadFile "https://raw.githubusercontent.com/pelson/Obvious-CI/master/bootstrap-obvious-ci-and-miniconda.py"'
+  - 'if "%PLATFORM%" == "x64" python bootstrap-obvious-ci-and-miniconda.py =C:\Miniconda %PLATFORM% %CONDA_PY:~0,1% --without-obvci'
   - "conda config --set always_yes yes --set changeps1 no"
   - "conda update -q conda"
   - "conda info -a"
@@ -27,7 +29,7 @@ build_script:
   - more +7 "bld.bat" >> tmp.bat
   - del bld.bat
   - more tmp.bat >> bld.bat
-  - call bld.bat
+  - "%CMD_IN_ENV% call bld.bat"
   - cd ..
   
 on_success:
