--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,22 +1,22 @@
 environment:
-  matrix:
-    - BLD: x86 
-    - BLD: x86_64
-    
+  CMD_IN_ENV: "cmd /E:ON /V:ON /C obvci_appveyor_python_build_env.cmd"
+  TARGET_ARCH: x64
+  CONDA_PY: 27
+      
 install:
-  - 'IF "%BLD%" == "x86" set PATH=C:\Miniconda;C:\Miniconda\Scripts;%PATH%'
-  - 'IF "%BLD%" == "x86_64" set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%'
+  - 'set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%'
+  - 'git clone https://github.com/pelson/Obvious-CI.git'
+  - 'move /y ".\Obvious-CI\scripts\obvci_appveyor_python_build_env.cmd" ".\conda\obvci_appveyor_python_build_env.cmd"' 
   - "conda config --set always_yes yes --set changeps1 no"
   - "conda update -q conda"
   - "conda info -a"
   - "conda install conda-build=1.21"
-  
+
 build_script:
   - cd conda
   - echo echo ON >> tmp.bat
   - more +7 "bld.bat" >> tmp.bat
-  - powershell -Command "(gc tmp.bat) -replace 'build', 'build --no-test' | Out-File tmp.bat"
-  - del bld.bat
+  - powershell -Command "(gc tmp.bat) -replace 'conda build', '%CMD_IN_ENV% conda build --no-test' | Out-File tmp.bat"
   - more tmp.bat >> bld.bat
   - call bld.bat
   - cd ..
