--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,16 @@
 environment:
-  CMD_IN_ENV: "cmd /E:ON /V:ON /C obvci_appveyor_python_build_env.cmd"
+  CMD_IN_ENV: cmd /E:ON /V:ON /C obvci_appveyor_python_build_env.cmd
   TARGET_ARCH: x64
   CONDA_PY: 27
       
 install:
-  - 'set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%'
-  - 'git clone https://github.com/pelson/Obvious-CI.git'
-  - 'move /y ".\Obvious-CI\scripts\obvci_appveyor_python_build_env.cmd" ".\conda\obvci_appveyor_python_build_env.cmd"' 
-  - "conda config --set always_yes yes --set changeps1 no"
-  - "conda update -q conda"
-  - "conda info -a"
-  - "conda install conda-build=1.21"
+  - set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%
+  - git clone https://github.com/pelson/Obvious-CI.git
+  - move /y ".\Obvious-CI\scripts\obvci_appveyor_python_build_env.cmd" ".\conda\obvci_appveyor_python_build_env.cmd"'
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - conda install conda-build=1.21
 
 build_script:
   - cd conda
