--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
 install:
   - set PATH=C:\Miniconda-x64;C:\Miniconda-x64\Scripts;%PATH%
   - git clone https://github.com/pelson/Obvious-CI.git
-  - move /y ".\Obvious-CI\scripts\obvci_appveyor_python_build_env.cmd" ".\conda\obvci_appveyor_python_build_env.cmd"'
+  - move /y ".\Obvious-CI\scripts\obvci_appveyor_python_build_env.cmd" ".\conda\obvci_appveyor_python_build_env.cmd"
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
