--- a/travis.yml
+++ b/travis.yml
@@ -39,7 +39,7 @@ after_success:
       cd ..;
     fi
   - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
-      docker build -q -t statiskit/ubuntu Dockerfile;
+      docker build -t statiskit/ubuntu .;
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
       docker push statiskit/ubuntu;
     fi
