--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,10 +16,10 @@ build_script:
   - cd conda
   - echo echo ON >> tmp.bat
   - more +7 "bld.bat" >> tmp.bat
-  - powershell -Command "(gc tmp.bat) -replace 'conda build', '%CMD_IN_ENV% conda build' | Out-File tmp.bat"
+  #- powershell -Command "(gc tmp.bat) -replace 'conda build', '%CMD_IN_ENV% conda build' | Out-File tmp.bat"
   - del bld.bat
   - more tmp.bat >> bld.bat
-  - call bld.bat
+  - %CMD_IN_ENV% call bld.bat
   - cd ..
   
 on_success:
